--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,5 @@
 version: '2'
 
-# Usage example: https://github.com/stilliard/docker-pure-ftpd/wiki/Docker-stack-with-Wordpress-&-FTP
-
 services:
   ftpd_server:
     image: stilliard/pure-ftpd
@@ -9,16 +7,15 @@ services:
     ports:
       - "21:21"
       - "30000-30009:30000-30009"
-    volumes: # remember to replace /folder_on_disk/ with the path to where you want to store the files on the host machine
-      - "/folder_on_disk/data:/home/username/"
-      - "/folder_on_disk/passwd:/etc/pure-ftpd/passwd"
-# uncomment for ssl/tls, see https://github.com/stilliard/docker-pure-ftpd#tls
-#      - "/folder_on_disk/ssl:/etc/ssl/private/"
+    volumes: 
+      - "/mnt/:/home/pgao/"
+      - "./passwd:/etc/pure-ftpd/passwd"
+      # - "/folder_on_disk/ssl:/etc/ssl/private/"
     environment:
       PUBLICHOST: "localhost"
-      FTP_USER_NAME: username
-      FTP_USER_PASS: mypass
-      FTP_USER_HOME: /home/username
+      FTP_USER_NAME: pgao
+      # FTP_USER_PASS: mypass
+      FTP_USER_HOME: /home/pgao
 # also for ssl/tls:
 #      ADDED_FLAGS: "--tls=2"
     restart: always
